# vicpathc

./: README.md  docker-compose.yml
.devcontainer/: docker-compose-old.yml
gen-segments/: gen-segments.cpp  importcsv.sql
server/: CMakeLists.txt  main.cpp  old  point.h  quadnode.cpp  quadnode.h  quadtree.cpp  searchgraph.cpp  searchgraph.h  segment.h  server.cpp  server.h
server-boost/geo/: geoobjs.h
server-old/: quadnode.cpp  quadnode.h  quadtree.cpp  quadtree.h  searchgraph.cpp  server.cpp  server.h
server-single/: q-tree-server.cpp
server/geoobjects/: geoobjs.h
testc/: test-lib.cpp
